# edupage-mcp

./: .gitignore  .mcp.json  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/edupage_mcp/: __init__.py  __main__.py  server.py
