[project]
name = "edupage-mcp"
version = "0.1.0"
description = "MCP server for Edupage - access timetables, grades, messages and more"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.10"
authors = [{name = "Martin Hlavac"}]
keywords = ["mcp", "edupage", "school", "timetable", "grades"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "mcp>=1.2.0",
    "edupage-api>=0.12.3",
]

[project.scripts]
edupage-mcp = "edupage_mcp:main"

[project.urls]
Homepage = "https://github.com/mhlavac/edupage-mcp"
Repository = "https://github.com/mhlavac/edupage-mcp"
Issues = "https://github.com/mhlavac/edupage-mcp/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/edupage_mcp"]

[dependency-groups]
dev = ["ruff"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
